--- a/AnalyseTool/RevitCommands/ParameterControl/MVVM/MainTab/MainView.xaml
+++ b/AnalyseTool/RevitCommands/ParameterControl/MVVM/MainTab/MainView.xaml
@@ -3,40 +3,38 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:parameterControl="clr-namespace:AnalyseTool.RevitCommands.ParameterControl.MVVM.ParameterAnalyseTab"
     xmlns:parameterValue="clr-namespace:AnalyseTool.RevitCommands.ParameterControl.MVVM.ParameterValueTab"
     xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
     xmlns:viewmodel="clr-namespace:AnalyseTool.RevitCommands.ParameterControl.MVVM.MainTab"
+    xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
     Title="Analyze Tool"
     Width="850"
     Height="600"
     MinWidth="500"
     MinHeight="300"
-    d:DataContext="{d:DesignInstance viewmodel:MainViewModel}"
-    TextElement.Foreground="{DynamicResource MaterialDesign.Brush.Foreground}"
     mc:Ignorable="d">
-    <Window.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme
-                    BaseTheme="Light"
-                    PrimaryColor="Blue"
-                    SecondaryColor="Lime" />
+    <!--  d:DataContext="{d:DesignInstance viewmodel:MainViewModel}"  -->
 
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Window.Resources>
-
-    <TabControl Margin="10">
+    <DockPanel>
+        <Button
+            Height="25"
+            Background="CadetBlue"
+            Command="{Binding TestWebCommand}"
+            Content="Update Data"
+            DockPanel.Dock="Bottom"
+            FontWeight="Bold"
+            Foreground="White" />
+        <wv2:WebView2 x:Name="webView" />
+    </DockPanel>
+    <!--<TabControl Margin="10">
         <TabItem Header="Parameter Control">
             <parameterControl:ParameterAnalyseUserControl DataContext="{Binding ParameterAnalyseViewModel}" />
         </TabItem>
         <TabItem Header="Parameter Value Control">
             <parameterValue:ParameterValueUserControl DataContext="{Binding ParameterValueViewModel}" />
         </TabItem>
-    </TabControl>
+    </TabControl>-->
 
 </Window>
