--- a/AnalyseTool/RevitCommands/ParameterControl/MVVM/ParameterValueTab/ParameterValueUserControl.xaml
+++ b/AnalyseTool/RevitCommands/ParameterControl/MVVM/ParameterValueTab/ParameterValueUserControl.xaml
@@ -4,27 +4,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:AnalyseTool.RevitCommands.ParameterControl.MVVM.ParameterValueTab"
-    xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
-    d:DataContext="{d:DesignInstance Type=local:ParameterValueViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
+    <!--  d:DataContext="{d:DesignInstance Type=local:ParameterValueViewModel}"  -->
 
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme
-                    BaseTheme="Light"
-                    PrimaryColor="Blue"
-                    SecondaryColor="Lime" />
 
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
     <DockPanel Margin="10">
 
         <UniformGrid DockPanel.Dock="Top" Rows="1">
@@ -38,12 +25,7 @@
             <Button Content="Clear Filters" />
         </UniformGrid>
         <Grid>
-            <!--<wv2:WebView2 x:Name="webView" />-->
-
-            <!--<lvc:PieChart
-                DataClickCommand="{Binding SelectElementsCommand}"
-                LegendLocation="Right"
-                Series="{Binding SeriesCollection}" />-->
+            <wv2:WebView2 x:Name="webView" />
         </Grid>
 
 
