add ParameterFilledEmptyChart. Add Cart to place hier grafics. Add also layout folder and two files HeaderLayout and MainLayout

--- a/AnalyseTool/RevitCommands/ParameterControl/MVVM/MainTab/MainView.xaml
+++ b/AnalyseTool/RevitCommands/ParameterControl/MVVM/MainTab/MainView.xaml
@@ -20,6 +20,7 @@
     <DockPanel>
         <Button
             Height="25"
+            VerticalAlignment="Bottom"
             Background="CadetBlue"
             Command="{Binding TestWebCommand}"
             Content="Update Data"
