--- a/AnalyseTool/RevitCommands/ParameterControl/MVVM/MainTab/MainView.xaml
+++ b/AnalyseTool/RevitCommands/ParameterControl/MVVM/MainTab/MainView.xaml
@@ -14,6 +14,7 @@
     Height="600"
     MinWidth="500"
     MinHeight="300"
+    Background="Transparent"
     mc:Ignorable="d">
     <!--  d:DataContext="{d:DesignInstance viewmodel:MainViewModel}"  -->
 
