add window show control and di work now

--- a/AnalyseTool/RevitCommands/MainView.xaml
+++ b/AnalyseTool/RevitCommands/MainView.xaml
@@ -12,6 +12,7 @@
     MinWidth="500"
     MinHeight="300"
     Background="Transparent"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
 
     <DockPanel>
